--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +13,11 @@
             background-color: #f4f4f4;
             text-align: center;
         }
+
         h1 {
             color: #333;
         }
+
         .container {
             max-width: 600px;
             margin: 0 auto;
@@ -23,6 +26,7 @@
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+
         input[type="file"] {
             margin: 10px 0;
             padding: 10px;
@@ -30,6 +34,7 @@
             border-radius: 5px;
             width: 100%;
         }
+
         button {
             display: block;
             margin: 10px auto;
@@ -41,18 +46,21 @@
             color: white;
             cursor: pointer;
         }
+
         button:hover {
             background-color: #0056b3;
         }
+
         .hidden {
             display: none;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Excel to PDF Generator</h1>
-        
+
         <!-- Upload Excel File -->
         <label for="excelFile">Upload Excel File:</label>
         <input type="file" id="excelFile" accept=".xlsx, .xls" />
@@ -62,6 +70,7 @@
 
         <!-- Generate PDF Button -->
         <button id="generateButton" class="hidden">Generate PDF Files</button>
+        <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
     </div>
 
     <script>
@@ -81,6 +90,7 @@
             // Simulate upload logic
             alert(`File "${file.name}" uploaded successfully!`);
             generateButton.classList.remove('hidden'); // Show the Generate PDF button
+            handleFileSelect();
         });
 
         // Function: Handle PDF generation
@@ -88,6 +98,40 @@
             alert('Generating PDF files...');
             // Add logic to process the Excel file and generate PDFs
         });
+        var ExcelToJSON = function () {
+
+            this.parseExcel = function (file) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    var data = e.target.result;
+                    var workbook = XLSX.read(data, {
+                        type: 'binary'
+                    });
+                    workbook.SheetNames.forEach(function (sheetName) {
+                        // Here is your object
+                        var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
+                        var json_object = JSON.stringify(XL_row_object);
+                        console.log(JSON.parse(json_object));
+                        jQuery('#xlx_json').val(json_object);
+                    })
+                };
+
+                reader.onerror = function (ex) {
+                    console.log(ex);
+                };
+
+                reader.readAsBinaryString(file);
+            };
+        };
+
+        function handleFileSelect(evt) {
+
+            var files = evt.target.files; // FileList object
+            var xl2json = new ExcelToJSON();
+            xl2json.parseExcel(files[0]);
+        }
     </script>
 </body>
+
 </html>
