--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
 
         function handleFileSelect(evt) {
 
-            var files = evt.target.files; // FileList object
+            //var files = evt.target.files; // FileList object
+            var files = $("#excelFile").files;
             var xl2json = new ExcelToJSON();
             xl2json.parseExcel(files[0]);
         }
+        
     </script>
 </body>
 
