--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
                         var json_object = JSON.stringify(XL_row_object);
                         console.log(JSON.parse(json_object));
-                        jQuery('#xlx_json').val(json_object);
+                        $('#xlx_json').val(json_object);
                     })
                 };
 
@@ -131,7 +131,7 @@
         function handleFileSelect(evt) {
 
             //var files = evt.target.files; // FileList object
-            var files = jQuery('#excelFile').files;
+            var files = $('#excelFile')[0].files;
             var xl2json = new ExcelToJSON();
             xl2json.parseExcel(files[0]);
         }
