--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         }
 
         h1 {
-            color: #333;
+            text-align: center;
+            font-family: 'Dancing Script', cursive;
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: #6b4226;
         }
 
         .container {
@@ -66,7 +70,7 @@
 
 <body>
     <div class="container">
-        <h1> <3 Phương Nhi Đáng iu ^^ </h1>
+        <h1>Phương Nhi Đáng Yêu - Làm Việc Vui Vẻ Nhé</h1>
 
         <!-- Upload Excel File -->
         <label for="excelFile">Upload Excel File:</label>
@@ -79,6 +83,8 @@
         <button id="generateButton" class="hidden">Generate PDF Files</button>
         <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
     </div>
+
+    
 </body>
 
 </html>
