--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--<script src="script.js"></script> -->
     <script type="module" src="script.js"></script>
 
-    <title>Excel to PDF Generator</title>
+    <title> <3 Phương Nhi <3 đáng iu</title>
     <style>
         body {
             font-family: Arial, sans-serif;
