--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         <h1>Phương Nhi Đáng Yêu - Làm Việc Vui Vẻ Nhé</h1>
 
         <!-- Upload Excel File -->
-        <label for="excelFile">Upload Excel File:</label>
+        <label for="excelFile">Chọn File Phương Nhi muốn upload đi:</label>
         <input type="file" id="excelFile" accept=".xlsx, .xls" />
 
         <!-- Upload Button -->
-        <button id="uploadButton">Upload Excel</button>
+        <button id="uploadButton">Bấm vào đây để upload nhoazz</button>
 
         <!-- Generate PDF Button -->
-        <button id="generateButton" class="hidden">Generate PDF Files</button>
+        <button id="generateButton" class="hidden">Tạo ra file pdf nèeee</button>
         <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
     </div>
 
