--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
         <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
     </div>
 
-    
+    <script>
+        const uploadButton = document.getElementById('uploadButton');
+        const generateButton = document.getElementById('generateButton');
+        const excelFileInput = document.getElementById('excelFile');
+    </script>
 </body>
 
 </html>
