--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -73,17 +72,17 @@
 
 <body>
     <div class="container">
-        <h1>Phương Nhi Đáng Yêu - Làm Việc Vui Vẻ Nhé</h1>
+        <h1>Upload File</h1>
 
         <!-- Upload Excel File -->
-        <label for="excelFile">Chọn File Phương Nhi muốn upload đi:</label>
+        <label for="excelFile">Choose File:</label>
         <input type="file" id="excelFile" accept=".xlsx, .xls" />
 
         <!-- Upload Button -->
-        <button id="uploadButton">Bấm vào đây để upload nhoazz</button>
+        <button id="uploadButton">Upload</button>
 
         <!-- Generate PDF Button -->
-        <button id="generateButton" class="hidden">Tạo ra file pdf nèeee</button>
+        <button id="generateButton" class="hidden">Generate</button>
         <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
     </div>
 
@@ -91,53 +90,3 @@
 </body>
 
 </html>
-=======
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
-<script>
-  var ExcelToJSON = function() {
-
-    this.parseExcel = function(file) {
-      var reader = new FileReader();
-
-      reader.onload = function(e) {
-        var data = e.target.result;
-        var workbook = XLSX.read(data, {
-          type: 'binary'
-        });
-        workbook.SheetNames.forEach(function(sheetName) {
-          // Here is your object
-          var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
-          var json_object = JSON.stringify(XL_row_object);
-          console.log(JSON.parse(json_object));
-          jQuery('#xlx_json').val(json_object);
-        })
-      };
-
-      reader.onerror = function(ex) {
-        console.log(ex);
-      };
-
-      reader.readAsBinaryString(file);
-    };
-  };
-
-  function handleFileSelect(evt) {
-
-    var files = evt.target.files; // FileList object
-    var xl2json = new ExcelToJSON();
-    xl2json.parseExcel(files[0]);
-  }
-</script>
-
-<form enctype="multipart/form-data">
-  <input id="upload" type=file name="files[]">
-</form>
-
-<textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
-
-<script>
-  document.getElementById('upload').addEventListener('change', handleFileSelect, false);
-</script>
->>>>>>> parent of d435003 (aa)
