--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
-    <script src="script.js"></script>
-    <!--<script type="module" src="script.js"></script> -->
+     <!--<script src="script.js"></script> -->
+    <script type="module" src="script.js"></script>
     <script src="dist/bundle.js"></script>
 
     <title> <3 Phương Nhi <3 đáng iu</title>
