--- a/index.html
+++ b/index.html
@@ -87,5 +87,9 @@
 
     
 </body>
-
+<script>
+  const uploadButton = document.getElementById('uploadButton');
+  const generateButton = document.getElementById('generateButton');
+  const excelFileInput = document.getElementById('excelFile');
+</script>
 </html>
