--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- Generate PDF Button -->
         <button id="generateButton" class="hidden">Generate</button>
-        <textarea class="form-control" rows=35 cols=120 id="xlx_json"></textarea>
+        <textarea class="form-control" id="xlx_json"></textarea>
     </div>
 
     
@@ -91,5 +91,25 @@
   const uploadButton = document.getElementById('uploadButton');
   const generateButton = document.getElementById('generateButton');
   const excelFileInput = document.getElementById('excelFile');
+  // Function: Handle file upload
+  uploadButton.addEventListener('click', () => {
+      const file = excelFileInput.files[0];
+      if (!file) {
+          alert('Please select an Excel file to upload!');
+          return;
+      }
+      handleFileSelect();
+      // Simulate upload logic
+      alert(`File "${file.name}" uploaded successfully!`);
+      generateButton.classList.remove('hidden'); // Show the Generate PDF button
+
+  });
+
+  // Function: Handle PDF generation
+  generateButton.addEventListener('click', () => {
+      alert('Generating PDF files...');
+      // Add logic to process the Excel file and generate PDFs
+      generatePDFs(jsonData);
+  });
 </script>
 </html>
