--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Upload Excel File</h1>
     <form id="uploadForm">
         <input type="file" id="fileInput" name="file" accept=".xlsx, .xls" required>
-        <button type="submit">Upload and Generate PDFs</button>
+        <button type="submit">Upload and Generate DOCXs</button>
+        
     </form>
 
     <script>
@@ -30,7 +31,7 @@
             formData.append("file", fileInput.files[0]);
 
             try {
-                const response = await fetch("http://localhost:8080/api/upload-excel", {
+                const response = await fetch("http://localhost:8080/api/upload-excel-docx", {
                     method: "POST",
                     body: formData,
                 });
